[package]
name = "http-replay-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Dorian Maliszewski <maliszewskid3@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4", features = ["openssl"]}
awc = {version = "3.2.0"}
url = "2.2"
log = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
actix-session= {version = "0.8.0", features = ["cookie-session"]}
serde = {version= "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "1.6.1", features= ["v4"]}
reqwest = { version = "0.11", features = ["stream"] }
tokio-stream = { version = "0.1.3", features = ["sync"] }
tokio = { version = "1.24.2", features = ["sync", "io-util"] }
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }

[[test]]
name = "integration"
path = "tests/tests.rs"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "http-replay-proxy"
