[package]
name = "http-replay-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Dorian Maliszewski <maliszewskid3@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2"
log = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
serde = {version= "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9.27"
uuid = {version = "1.6.1", features= ["v4"]}
tokio-stream = { version = "0.1.3", features = ["sync"] }
tokio = { version = "1.24.2", features = ["full"] }
axum = { version = "0.7.2", features = ["http1", "http2", "tokio", "json", "query", "tower-log"] }
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1.1"
tower = { version = "0.4", features = ["make"] }

[[test]]
name = "integration"
path = "tests/tests.rs"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "http-replay-proxy"
